styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html, body {
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
  }
  #__next {
    min-height: 100%;
  }
}

@layer utilities {
  .card-shadow {
    box-shadow: 2px 2px 8px rgba(0,0,0,0.4);
  }
  .glow-green {
    box-shadow: 0 0 12px 3px rgba(74, 222, 128, 0.7);
  }
}

